Fixed Text align

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ body {
   justify-self: center;
   justify-content: center;
   align-items: center;
+  text-align: center;
   background-color: rgba(110, 63, 251, 1);
   color: white;
 }
